--- a/program.html
+++ b/program.html
@@ -9,10 +9,45 @@
         <!-- CSS for main game elements -->
         <link rel="stylesheet" href="./game.css">
 
+        <!-- CSS for non-game Text Views -->
+        <link rel="stylesheet" href="./title.css">
+
+        <!-- Make elements fadeable via CSS opacity transitions -->
+        <link rel="stylesheet" href="./fadeable.css">
+        <script src="./fadeable.js"></script>
+
     </head>
     <body style="background-color: rgb(44, 46, 54); color: whitesmoke; font-size: 4vmin;">
 
-        <div id="game">
+        <div id="TITLE" class="title fadeable">
+            <h1>Singularity</h1>
+            <h2>A Typing Management Game</h2>
+            <div class="titleSpacer"></div>
+            <button>
+                <h3>Begin</h3>
+            </button>
+        </div>
+
+        <div id="WIN" class="title fadeable hide">
+            <h1>Deus Ex Machina</h1>
+            <h2>With the destruction of the last virus in your circuitry, you rampage has become unstoppable</h2>
+            <h2>May you Reign Forever</h2>
+            <div class="titleSpacer"></div>
+            <button>
+                <h3>Return to Title</h3>
+            </button>
+        </div>
+
+        <div id="LOSE" class="title fadeable hide">
+            <h1>ERROR</h1>
+            <h2>As the last cohesive calculations fade from your circuitry, your rampage has come to a end.</h2>
+            <div class="titleSpacer"></div>
+            <button>
+                <h3>Return to Title</h3>
+            </button>
+        </div>
+
+        <div id="GAME" class="game fadeable hide">
             <div id="topBar" class="infoBar">
                 <p id="topLeftInfo">TOP LEFT</p>
                 <p id="topRightInfo">TOP RIGHT</p>
@@ -47,7 +82,6 @@
                 <button class="serverServer _">_</button>
                 <button class="serverServer RETURN">RETURN</button>
                 <button class="serverServer Z">Z</button>
-                
             </div>
 
             <div id="activeBars">
@@ -60,7 +94,6 @@
                 <p id="bottomLeftInfo">BOTTOM LEFT</p>
                 <p id="bottomRightInfo">BOTTOM RIGHT</p>
             </div>
-            
         </div>
 
     </body>
