--- a/program.html
+++ b/program.html
@@ -16,8 +16,18 @@
         <link rel="stylesheet" href="./fadeable.css">
         <script src="./fadeable.js"></script>
 
+        <!-- Handle the logic and styling around the Binary Background -->
+        <link rel="stylesheet" href="./binaryBG.css">
+        <script src="./binaryBG.js"></script>
+
+        <!--
+        <script src="debugRandomColors.js"></script>
+        -->
+        
     </head>
     <body style="background-color: rgb(44, 46, 54); color: whitesmoke; font-size: 4vmin;">
+
+        <p id="binaryBG" class="binaryBG randomColor"></p>
 
         <div id="TITLE" class="title fadeable">
             <h1>Singularity</h1>
