fix text position in buttons
buttons on non-game views now properly center their text vertically

--- a/program.html
+++ b/program.html
@@ -30,31 +30,25 @@
         <p id="binaryBG" class="binaryBG randomColor"></p>
 
         <div id="TITLE" class="title fadeable">
-            <h1>Singularity</h1>
-            <h2>A Typing Management Game</h2>
+            <p>Singularity</p>
+            <p>A Typing Management Game</p>
             <div class="titleSpacer"></div>
-            <button onclick="window.changeFadeState('GAME')">
-                <h3>Begin</h3>
-            </button>
+            <button onclick="window.changeFadeState('GAME')">Begin</button>
         </div>
 
         <div id="WIN" class="title fadeable hide">
-            <h1>Deus Ex Machina</h1>
-            <h2>With the destruction of the last virus in your circuitry, you rampage has become unstoppable</h2>
-            <h2>May you Reign Forever</h2>
+            <p>Deus Ex Machina</p>
+            <p>With the destruction of the last virus in your circuitry, you rampage has become unstoppable</p>
+            <p>May you Reign Forever</p>
             <div class="titleSpacer"></div>
-            <button onclick="window.changeFadeState('TITLE')">
-                <h3>Return to Title</h3>
-            </button>
+            <button onclick="window.changeFadeState('TITLE')">Return to Title</button>
         </div>
 
         <div id="LOSE" class="title fadeable hide">
-            <h1>ERROR</h1>
-            <h2>As the last cohesive calculations fade from your circuitry, your rampage has come to a end.</h2>
+            <p>ERROR</p>
+            <p>As the last cohesive calculations fade from your circuitry, your rampage has come to a end.</p>
             <div class="titleSpacer"></div>
-            <button onclick="window.changeFadeState('TITLE')">
-                <h3>Return to Title</h3>
-            </button>
+            <button onclick="window.changeFadeState('TITLE')">Return to Title</button>
         </div>
 
         <div id="GAME" class="game fadeable hide">
