create Server setup script
- `server.js` consumes `<Server>` elements and sets them up in the DOM
- things are shaping up to this being a very decentralized solution, where the mutexes and intervalUpdates are controlled ON THE INDIVIDUAL ELEMENTS rather than in a central manager

--- a/program.html
+++ b/program.html
@@ -20,6 +20,9 @@
         <link rel="stylesheet" href="./binaryBG.css">
         <script src="./binaryBG.js"></script>
 
+        <!-- Consume <Server> elements for setup and setup server DOM elements -->
+        <script src="./server.js"></script>
+
         <!--
         <script src="debugRandomColors.js"></script>
         -->
@@ -60,34 +63,34 @@
             </div>
 
             <div class="serverContainer">
-                <button class="serverServer A">A</button>
-                <button class="serverServer B">B</button>
-                <button class="serverServer C">C</button>
-                <button class="serverServer D">D</button>
-                <button class="serverServer E">E</button>
-                <button class="serverServer F">F</button>
-                <button class="serverServer G">G</button>
-                <button class="serverServer H">H</button>
-                <button class="serverServer I">I</button>
-                <button class="serverServer J">J</button>
-                <button class="serverServer K">K</button>
-                <button class="serverServer L">L</button>
-                <button class="serverServer M">M</button>
-                <button class="serverServer N">N</button>
-                <button class="serverServer O">O</button>
-                <button class="serverServer P">P</button>
-                <button class="serverServer Q">Q</button>
-                <button class="serverServer R">R</button>
-                <button class="serverServer S">S</button>
-                <button class="serverServer T">T</button>
-                <button class="serverServer U">U</button>
-                <button class="serverServer V">V</button>
-                <button class="serverServer W">W</button>
-                <button class="serverServer X">X</button>
-                <button class="serverServer Y">Y</button>
-                <button class="serverServer _">_</button>
-                <button class="serverServer RETURN">RETURN</button>
-                <button class="serverServer Z">Z</button>
+                <server serverID="A"></server>
+                <server serverID="B"></server>
+                <server serverID="C"></server>
+                <server serverID="D"></server>
+                <server serverID="E"></server>
+                <server serverID="F"></server>
+                <server serverID="G"></server>
+                <server serverID="H"></server>
+                <server serverID="I"></server>
+                <server serverID="J"></server>
+                <server serverID="K"></server>
+                <server serverID="L"></server>
+                <server serverID="M"></server>
+                <server serverID="N"></server>
+                <server serverID="O"></server>
+                <server serverID="P"></server>
+                <server serverID="Q"></server>
+                <server serverID="R"></server>
+                <server serverID="S"></server>
+                <server serverID="T"></server>
+                <server serverID="U"></server>
+                <server serverID="V"></server>
+                <server serverID="w"></server>
+                <server serverID="x"></server>
+                <server serverID="y"></server>
+                <server serverID="_"></server>
+                <server serverID="RETURN"></server>
+                <server serverID="Z"></server>
             </div>
 
             <div id="activeBars">
