--- a/program.html
+++ b/program.html
@@ -3,25 +3,25 @@
     <head>
         <meta charset='utf-8'>
         <title>Singularity</title>
-        <link rel="icon" href="./Singularity.icon.png" type="image/x-icon">
+        <link rel="icon" href="./assets/icon.png" type="image/x-icon">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
         <!-- CSS for main game elements -->
-        <link rel="stylesheet" href="./game.css">
+        <link rel="stylesheet" href="./css/game.css">
 
         <!-- CSS for non-game Text Views -->
-        <link rel="stylesheet" href="./title.css">
+        <link rel="stylesheet" href="./css/title.css">
 
         <!-- Make elements fadeable via CSS opacity transitions -->
-        <link rel="stylesheet" href="./fadeable.css">
-        <script src="./fadeable.js"></script>
+        <link rel="stylesheet" href="./css/fadeable.css">
+        <script src="./code/src/fadeable.js"></script>
 
         <!-- Handle the logic and styling around the Binary Background -->
-        <link rel="stylesheet" href="./binaryBG.css">
-        <script src="./binaryBG.js"></script>
+        <link rel="stylesheet" href="./css/binaryBG.css">
+        <script src="./code/src/binaryBG.js"></script>
 
         <!-- Consume <Server> elements for setup and setup server DOM elements -->
-        <script src="./server.js"></script>
+        <script src="./code/src/server.js"></script>
 
         <!--
         <script src="debugRandomColors.js"></script>
