--- a/program.html
+++ b/program.html
@@ -52,7 +52,7 @@
         <div id="TITLE" class="title fadeable">
             <p>Singularity</p>
             <p>A Typing Management Game</p>
-            <a href="https://github.com/Snail51/Singularity/blob/main/README.md">View Instructions</a>
+            <a href="https://github.com/Snail51/Singularity/blob/main/README.md" target="_blank">View Instructions</a>
             <div class="titleSpacer"></div>
             <audio id="musicTitle" loop preload="auto">
                 <source src="./assets/audio/intro.ogg" type="audio/ogg">
