switch to fixed-prompt system
instead of users typing a random series of letters, there is now a fixed list of prompts (located in `/assets/prompts.txt`), which is randomly polled each time a prompt is needed. these prompts are simpler but are much longer to make up for that. care as also been taken to ensure that at least 1 prompt uses every letter of the English alphabet.

--- a/program.html
+++ b/program.html
@@ -124,7 +124,7 @@
             <div id="activeBars">
                 <input id="notify" type="text" value="" placeholder="NOTIFICATIONS" readonly>
                 <input id="prompt" type="text" value="" placeholder="PROMPT" readonly>
-                <input id="terminal" type="text" value="" placeholder="SCAN_J">
+                <input id="terminal" type="text" value="" placeholder="COMMAND">
             </div>
 
             <div id="bottomBar" class="infoBar">
