--- a/program.html
+++ b/program.html
@@ -6,6 +6,27 @@
         <link rel="icon" href="./assets/img/icon.png" type="image/x-icon">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
+        <title>Singularity</title>
+        <meta charset="utf-8">
+        <meta name="description" content="A Typing Management Game">
+        <meta name="keywords" content="game,typing,strategy,ai,fun,tense">
+
+        <meta property="og:title" content="Singularity">
+        <meta property="og:description" content="A Typing Management Game">
+        <meta property="og:site_name" content="Snailien Concepts">
+        <meta property="og:url" content="singularity.snailien.net">
+        <meta property="og:image" content="./assets/img/icon.png">
+
+        <meta itemprop="name" content="Singularity">
+        <meta itemprop="description" content="A Typing Management Game">
+        <meta itemprop="image" content="./assets/img/icon.png">
+
+        <meta name="twitter:card" content="A Typing Management Game">
+        <meta name="twitter:url" content="singularity.snailien.net">
+        <meta name="twitter:title" content="Singularity">
+        <meta name="twitter:description" content="A Typing Management Game">
+        <meta name="twitter:image" content="./assets/img/icon.png">
+
         <!-- CSS for main game elements -->
         <link rel="stylesheet" href="./css/game.css">
 
