--- a/program.html
+++ b/program.html
@@ -71,7 +71,7 @@
         <div id="TITLE" class="title fadeable">
             <p>SINGULARITY</p>
             <p>A Typing Management Game</p>
-            <a href="https://github.com/Snail51/Singularity/blob/main/README.md" target="_blank">View Instructions</a>
+            <a href="https://github.com/Snail51/Singularity/blob/main/README.md#gameplay-guide" target="_blank">View Instructions</a>
             <div class="titleSpacer"></div>
             <audio id="musicTitle" loop preload="auto">
                 <source src="./assets/audio/intro.ogg" type="audio/ogg">
